--- a/app/views/sns/admin/profiles/_public_profile.html.erb
+++ b/app/views/sns/admin/profiles/_public_profile.html.erb
@@ -13,9 +13,7 @@ is_auth = Core.user.has_auth?(:manager)
 
 is_photo_dl = p_photo && (is_mine_prof || is_auth) ? true : false
 %>
-<%if is_photo_dl%>
-<%=link_to "プロフィール写真をダウンロードする", p_photo.download_uri, :class=>"button"%>
-<%end%>
+<%=link_to "プロフィール写真をダウンロードする", p_photo.download_uri, :class=>"button" if is_photo_dl%>
 
 <%if public_state[:base_info]=="public" && is_menu_enabled("base_info")%>
 <div class="profileData<%="1" if data_column == 1 %>">
