--- a/app/views/sys/admin/account/login.html.erb
+++ b/app/views/sys/admin/account/login.html.erb
@@ -15,8 +15,7 @@
 <%= hidden_field_tag :uri, h(@uri) %>
 
 <div class="box">
-  <div style="color: gray; text-align:left; padding: 8px 8px 8px 8px">v<%= Joruri.version %></div>
-
+  <p>v<%= Joruri.version %></p>
   <h1>Joruri Plus+</h1>
   <div class="notice"><%= flash[:notice] %></div>
   <div class="fields">
